--- a/notatka/app/src/main/res/layout/activity_main.xml
+++ b/notatka/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buy salmon"/>
+        android:text="Buy salmon and milk for developer branch"/>
 </RelativeLayout>
