--- a/notatka/app/src/main/res/menu/menu_notelist.xml
+++ b/notatka/app/src/main/res/menu/menu_notelist.xml
@@ -5,6 +5,11 @@
       tools:context=".CatalogActivity">
 
     <item
+        android:id="@+id/action_new_note"
+        android:title="@string/action_new_note"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_insert_dummy_data"
         android:title="@string/action_insert_dummy_data"
         app:showAsAction="never" />
