--- a/notatka/app/src/main/res/menu/menu_editor.xml
+++ b/notatka/app/src/main/res/menu/menu_editor.xml
@@ -6,12 +6,7 @@
       tools:context=".EditorActivity">
 
     <item
-        android:id="@+id/action_save"
-        android:title="@string/action_save"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/action_delete"
+        android:id="@+id/action_delete_current_note_"
         android:title="@string/action_delete"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
