--- a/notatka/app/src/main/res/values/colors.xml
+++ b/notatka/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#f9ceb5</color>
     <color name="colorPrimaryDark">#f1a494</color>
     <color name="colorAccent">#000000</color>
+    <color name="colorLight">#f2f2f2</color>
 </resources>
