Revert "implement 'new note' button 💌"
This reverts commit 3c0fcf55933567dbb327960c481d9d8a38f99824.

--- a/notatka/app/src/main/res/layout/list_item_note.xml
+++ b/notatka/app/src/main/res/layout/list_item_note.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:background="@color/colorLight"
-    android:layout_marginBottom="@dimen/notelist_margin">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/list_item_note_title"
@@ -14,7 +12,6 @@
         android:layout_height="wrap_content"
         tools:text="some text"
         android:textStyle="bold"
-        android:textColor="@color/colorAccent"
         android:padding="@dimen/activity_horizontal_margin"
         android:textSize="24sp"/>
 
