--- a/notatka/app/src/main/res/layout/fragment_note_list.xml
+++ b/notatka/app/src/main/res/layout/fragment_note_list.xml
@@ -3,6 +3,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/note_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="150dp"
-    android:clipToPadding="false"/>
+    android:layout_height="match_parent"/>
